# mang-sh

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  install.ps1  uninstall.ps1  uninstall.sh  update.ps1  update.sh  yo.sh
src/: ai.rs  cli.rs  config.rs  context.rs  feedback.rs  history.rs  main.rs  shell.rs  shortcuts.rs  telemetry.rs  ui.rs  updater.rs
