[package]
name = "yo-rust"
version = "1.0.0"
edition = "2021"
authors = ["Paul Fleury <hello@paulfleury.com>"]
description = "Natural language terminal assistant powered by OpenRouter AI — just type 'yo'."
license = "MIT"
repository = "https://github.com/paulfxyz/yo-rust"
homepage = "https://github.com/paulfxyz/yo-rust"
keywords = ["cli", "ai", "shell", "terminal", "openrouter"]
categories = ["command-line-utilities"]

[[bin]]
name = "yo"
path = "src/main.rs"

[dependencies]
# HTTP client for OpenRouter API calls
reqwest = { version = "0.12", features = ["blocking", "json"] }
# JSON serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform config directory resolution
dirs = "5"
# Terminal color and style output
colored = "2"
# Read user input with line editing
rustyline = "14"
# Regex for detecting !commands and API-change intent
regex = "1"

[profile.release]
opt-level = 3
strip = true
lto = true
